--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer-s3": "^3.0.1",
     "nodemon": "^3.0.3",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "zod": "^3.22.4"
   }
 }
