--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node src/index.js",
     "dev": "npx nodemon src/index.js"
   },
@@ -27,5 +27,9 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.24.1",
+    "jest": "^29.7.0"
   }
 }
